add a link of weather app

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Navbar Section -->
     <nav id="navbar" class="flex s-around bg-color">
         <div class="left-nav">
-            <h2 class="t-white">lucky junghare</h2>
+            <h2 class="t-white">luck junghare</h2>
         </div>
         <div class="right-nav">
             <ul class="flex">
@@ -159,9 +159,9 @@
                 <p class="t-white poppins"> A weather app using HTML, CSS and JavaScript. Fetch the weather from the
                     openweather app using fetch api.</p>
                 <div class="buttons flex s-around">
-                    <a href="#"
+                    <a href="https://github.com/luckyjunghare881/weather_App.git"
                         target="_blanks" class="btn mx-1 m-top">GitHub</a>
-                    <a href="#" target="_blanks" class="btn m-top live">Live
+                    <a href="https://weather-lucky-1.vercel.app/" target="_blanks" class="btn m-top live">Live
                         Link</a>
                 </div>
             </div>
@@ -179,7 +179,7 @@
                         Link</a>
                 </div>
             </div>
-            <div class="projects-item flex f-col s-center items-center">
+            <div class="projects-item flex f-col s-center items-center">l
                 <div class="image-container p-two">
                     <img src="./MBA.png" alt="">
                 </div>
