--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Navbar Section -->
     <nav id="navbar" class="flex s-around bg-color">
         <div class="left-nav">
-            <h2 class="t-white">luck junghare</h2>
+            <h2 class="t-white">lucky junghare</h2>
         </div>
         <div class="right-nav">
             <ul class="flex">
@@ -179,7 +179,7 @@
                         Link</a>
                 </div>
             </div>
-            <div class="projects-item flex f-col s-center items-center">l
+            <div class="projects-item flex f-col s-center items-center">
                 <div class="image-container p-two">
                     <img src="./MBA.png" alt="">
                 </div>
