--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <h6 class="poppinss">Hi, I'm</h6>
                 <h1 class="t-white">lucky junghare</h1>
                 <h4 class="poppinss">Frontend Web Developer</h4>
-                <a href="#" target="_blank"><button
+                <a href="Resume.pdf" target="_blank"><button
                         class="btn poppins">Resume</button></a>
                 <a class="btn live poppins" id="hireme" href="https://www.linkedin.com/in/lucky-junghare-869982232"
                     target="_blank">Let's Talk</a>
