projects ppt  added

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         </div>
         <div class="right-nav">
             <ul class="flex">
-                <li><a href="#home" class="t-white roboto">Home</a></li>
-                <li><a href="#about" class="t-white roboto">About Me</a></li>
-                <li><a href="#skills" class="t-white roboto">Skills</a></li>
-                <li><a href="#services" class="t-white roboto">services</a></li>
-                <li><a href="#projects" class="t-white roboto">Projects</a></li>
+                <li><a href="home.html" class="t-white roboto">Home</a></li>
+                <li><a href="about.html" class="t-white roboto">About Me</a></li>
+                <li><a href="skills.html" class="t-white roboto">Skills</a></li>
+                <li><a href="services.html" class="t-white roboto">services</a></li>
+                <li><a href="projects.html" class="t-white roboto">Projects</a></li>
             </ul>
         </div>
     </nav>
@@ -72,29 +72,7 @@
         </div>
     </section>
 
-    <!-- About Section -->
-    <section id="about">
-        <h1 class="t-center my-2 t-white f-2">About Me</h1>
-        <div class="about-container flex s-around ">
-            <div class=" about-left flex s-center items-center">
-                <!-- Here in src replade the given link with your secondary image link -->
-                <img src="./lucky-1.jpg" alt="" style="width: 50%;">
-            </div>
-
-            <div class="about-right flex">
-                <div class="about-content">
-                    <h1 class="t-white m-b-1 poppins">lucky junghare</h1>
-                    <p class="t-white poppins">A self-tought Frontend Web Developer B.Tech student looking for
-                        an opportunity in Web Development. <br>
-                        Who is committed to study web development. Mindset to fullfill the life with
-                        wonderful memories and knowledge.</p>
-                    <a class="btn live poppins" id="hireme"
-                        href="https://www.linkedin.com/in/lucky-junghare-869982232">Hire Me</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
+    
     <!-- Skills Section -->
     <section id="skills">
         <h1 class="t-center my-2 t-white f-2">Skills</h1>
@@ -163,6 +141,8 @@
                         target="_blanks" class="btn mx-1 m-top">GitHub</a>
                     <a href="https://weather-lucky-1.vercel.app/" target="_blanks" class="btn m-top live">Live
                         Link</a>
+                    <a href="#" target="_blanks" class="btn mx-1 m-top ">project PPT
+                       </a>
                 </div>
             </div>
             <div class="projects-item flex f-col s-center items-center">
