about section added

--- a/about.html
+++ b/about.html
@@ -11,25 +11,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
-    <section id="skills">
-        <h1 class="t-center my-2 t-white f-2">Skills</h1>
-        <div class="services-container flex s-around h-50"">
-        <div class=" skills-left flex s-center items-center">
-            <img src="/skills.png" alt="">
-        </div>
+    <section id="about">
+        <h1 class="t-center my-2 t-white f-2">About Me</h1>
+        <div class="about-container flex s-around ">
+            <div class=" about-left flex s-center items-center">
+                <!-- Here in src replade the given link with your secondary image link -->
+                <img src="lucky-1.jpg" alt="" style="width: 50%;">
+            </div>
 
-        <div class="skills-right flex items-center">
-            <div class="skillss-container">
-                <div class="html bar p-relative"><span class="bar-content left t-white">HTML</span><span
-                        class="bar-content right-skills t-white">90%</span></div>
-                <div class="css bar p-relative"><span class="bar-content left t-white">CSS</span><span
-                        class="bar-content right-skills t-white">80%</span></div>
-                <div class="js bar p-relative"><span class="bar-content left t-white">JavaScript</span><span
-                        class="bar-content right-skills t-white">75%</span></div>
-                <div class="bootstrap bar p-relative"><span class="bar-content left t-white">Bootstrap</span><span
-                        class="bar-content right-skills t-white">50%</span></div>
-                <div class="reactjs bar p-relative"><span class="bar-content left t-white">ReactJs</span><span
-                        class="bar-content right-skills t-white">30%</span></div>
+            <div class="about-right flex">
+                <div class="about-content">
+                    <h1 class="t-white m-b-1 poppins">lucky junghare</h1>
+                    <p class="t-white poppins">A self-tought Frontend Web Developer B.tech student looking for
+                        an opportunity in Web Development. <br>
+                        Who is committed to study web development. Mindset to fullfill the life with
+                        wonderful memories and knowledge.</p>
+                    <a class="btn live poppins" id="hireme"
+                        href="https://www.linkedin.com/in/lucky-junghare-869982232"">Hire Me</a>
+                </div>
             </div>
         </div>
     </section>
