--- a/index.html
+++ b/index.html
@@ -72,13 +72,35 @@
         </div>
     </section>
 
-    
+    <!-- About Section -->
+    <section id="about">
+        <h1 class="t-center my-2 t-white f-2">About Me</h1>
+        <div class="about-container flex s-around ">
+            <div class=" about-left flex s-center items-center">
+                <!-- Here in src replade the given link with your secondary image link -->
+                <img src="lucky-1.jpg" alt="" style="width: 50%;">
+            </div>
+
+            <div class="about-right flex">
+                <div class="about-content">
+                    <h1 class="t-white m-b-1 poppins">lucky junghare</h1>
+                    <p class="t-white poppins">A self-tought Frontend Web Developer B.tech student looking for
+                        an opportunity in Web Development. <br>
+                        Who is committed to study web development. Mindset to fullfill the life with
+                        wonderful memories and knowledge.</p>
+                    <a class="btn live poppins" id="hireme"
+                        href="https://www.linkedin.com/in/lucky-junghare-869982232"">Hire Me</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Skills Section -->
     <section id="skills">
         <h1 class="t-center my-2 t-white f-2">Skills</h1>
         <div class="services-container flex s-around h-50"">
         <div class=" skills-left flex s-center items-center">
-            <img src="/skills.png" alt="">
+            <img src="skills.png" alt="">
         </div>
 
         <div class="skills-right flex items-center">
