link is path added

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
     <section id="bottom">
         <div class="bottom-nav flex s-center items-center">
             <ul class="flex s-around items-center">
-                <a href="#home">
+                <a href="home.html">
                     <li class="bottomo-hover flex s-center items-center"><i class="fa-solid fa-house"></i></li>
                 </a>
-                <a href="#about">
+                <a href="about.html">
                     <li class="bottomo-hover flex s-center items-center"><i class="fa-solid fa-user"></i></li>
                 </a>
-                <a href="#skills">
+                <a href="skills.html">
                     <li class="bottomo-hover flex s-center items-center"><i class="fa-solid fa-code"></i></li>
                 </a>
-                <a href="#services">
+                <a href="services.html">
                     <li class="bottomo-hover flex s-center items-center">
                         <i class="fa-solid fa-rocket"></i>
                     </li>
