--- a/index.html
+++ b/index.html
@@ -263,11 +263,11 @@
     <!-- Footer Section -->
     <footer id="footer">
         <ul class="flex s-center w-80 m-auto my-2 res">
-            <li><a href="#home" class="poppinss">Home</a></li>
-            <li><a href="#about" class="poppinss">About</a></li>
-            <li><a href="#skills" class="poppinss">Skills</a></li>
-            <li><a href="#projects" class="poppinss">Projects</a></li>
-            <li><a href="#portfolio" class="poppinss">Portfolio</a></li>
+            <li><a href="home.html" class="poppinss">Home</a></li>
+            <li><a href="about.html" class="poppinss">About</a></li>
+            <li><a href="skills.html" class="poppinss">Skills</a></li>
+            <li><a href="projects.html" class="poppinss">Projects</a></li>
+            <li><a href="portfolio" class="poppinss">Portfolio</a></li>
         </ul>
         <ul class="flex s-center w-80 font-awesome ">
             <a href="https://www.linkedin.com/in/lucky-junghare-869982232" target="_blank">
