other ppt  is added

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         target="_blanks" class="btn mx-1 m-top">GitHub</a>
                     <a href="https://weather-lucky-1.vercel.app/" target="_blanks" class="btn m-top live">Live
                         Link</a>
-                    <a href="#" target="_blanks" class="btn mx-1 m-top ">project PPT
+                    <a href="https://gamma.app/docs/Weathe-App-Project-vxoup98rw6crtgw?mode=doc" target="_blanks" class="btn mx-1 m-top ">project PPT
                        </a>
                 </div>
             </div>
