--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
                         target="_blanks" class="btn mx-1 m-top">GitHub code</a>
                     <a href="https://weather-lucky-1.vercel.app/" target="_blanks" class="btn m-top live">Live
                         Link</a> 
-                        <a href="https://gamma.app/docs/Weather-App-Project-vxoup98rw6crtgw?mode=doc" target="_blanks" class="btn mx-1 m-top"> projects PPT
+                        <a href="https://tome.app/lucky-junghare/weather-app-clod7q4cf00qglc7bjae6jdg7" target="_blanks" class="btn mx-1 m-top"> projects PPT
                             </a>    
                         
                 </div>
