add the certificate section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <ul class="flex">
                 <li><a href="home.html" class="t-white roboto">Home</a></li>
                 <li><a href="about.html" class="t-white roboto">About Me</a></li>
+                <li><a href="certificate.html"class="t-white roboto">certificate</a></li>
                 <li><a href="skills.html" class="t-white roboto">Skills</a></li>
                 <li><a href="services.html" class="t-white roboto">services</a></li>
                 <li><a href="projects.html" class="t-white roboto">Projects</a></li>
@@ -36,6 +37,9 @@
                     <li class="bottomo-hover flex s-center items-center"><i class="fa-solid fa-house"></i></li>
                 </a>
                 <a href="about.html">
+                    <li class="bottomo-hover flex s-center items-center"><i class="fa-solid fa-user"></i></li>
+                </a>
+                <a href="certificate.html">
                     <li class="bottomo-hover flex s-center items-center"><i class="fa-solid fa-user"></i></li>
                 </a>
                 <a href="skills.html">
@@ -66,7 +70,7 @@
         <div class="home-right flex s-center items-center">
             <div class="circle flex s-center items-center" id="mainImage">
                 <!-- Here in src replace the given link with your image link -->
-                <img src="./lucky-0.jpg" alt="">
+                <img src="lucky.jpg" alt="">
             </div>
 
         </div>
@@ -94,6 +98,81 @@
             </div>
         </div>
     </section>
+
+    <!--certificate section-->
+  <!-- <section id="certificate">
+        <h1 class="t-center my-2 t-white f-3">certificate</h1>
+        <div class="services-container flex s-around h-50"">
+            <div class=" skills-left flex s-center items-center"></div>
+            -- <img src="Screenshot (1).png" alt="error" style="  width: 100%;">
+             <img src="Screenshot (2).png" alt="error" style="width: 100%;">  
+             <img src="Screenshot (3).png" alt="error" style="width: 100%;">
+                
+            </div>
+            <div class="certificate-right flex items-center"></div>
+
+    </section>-->
+    <!--<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Website</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+    }
+
+    header {
+      background-color: #333;
+      color: #ffffff;
+      padding: 10px;
+      text-align: center;
+    }
+
+    section {
+      max-width: 800px;
+      margin: 20px auto;
+      padding: 20px;
+      background-color: #fff;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      position: relative;
+    }
+
+    #certificate {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 20px auto;
+      border: 1px solid #ddd;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>certificate</h1>
+  </header>
+
+  <section>
+    <h2>Welcome to my achievement</h2>
+    <p>This is the main content of my achievement. </p>-->
+
+    <!-- Certificate Image -->
+   <!-- <img id="certificate" src="Screenshot (1).png" alt="Certificate Image" style=" size: 100%; ">
+    <img id="certificate" src="Screenshot (2).png" alt="Certificate Image" style="  width: 70%; ">
+    <img id="certificate" src="Screenshot (3).png" alt="Certificate Image" style="  width: 70%; ">
+    
+    <p>Feel free to explore our services and learn more about what we have to offer.</p>
+  </section>
+
+</body>
+</html>-->
+
 
     <!-- Skills Section -->
     <section id="skills">
@@ -265,6 +344,7 @@
         <ul class="flex s-center w-80 m-auto my-2 res">
             <li><a href="home.html" class="poppinss">Home</a></li>
             <li><a href="about.html" class="poppinss">About</a></li>
+            <li><a href="certificate.html" class="poppinss">certificate</a></li>
             <li><a href="skills.html" class="poppinss">Skills</a></li>
             <li><a href="projects.html" class="poppinss">Projects</a></li>
             <li><a href="portfolio" class="poppinss">Portfolio</a></li>
