--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="home-right flex s-center items-center">
             <div class="circle flex s-center items-center" id="mainImage">
                 <!-- Here in src replace the given link with your image link -->
-                <img src="lucky.jpg" alt="">
+                <img src="Screenshot 2025-09-08 145342.png" alt="">
             </div>
 
         </div>
@@ -92,7 +92,7 @@
         <div class="about-container flex s-around ">
             <div class=" about-left flex s-center items-center">
                 <!-- Here in src replade the given link with your secondary image link -->
-                <img src="lucky-1.jpg" alt="" style="width: 50%;">
+                <img src="Screenshot 2025-09-08 131157.png" alt="" style="width: 50%;">
             </div>
 
             <div class="about-right flex">
