salesforce project is add

--- a/index.html
+++ b/index.html
@@ -109,79 +109,7 @@
         </div>
     </section>
 
-    <!--certificate section-->
-  <!-- <section id="certificate">
-        <h1 class="t-center my-2 t-white f-3">certificate</h1>
-        <div class="services-container flex s-around h-50"">
-            <div class=" skills-left flex s-center items-center"></div>
-            -- <img src="Screenshot (1).png" alt="error" style="  width: 100%;">
-             <img src="Screenshot (2).png" alt="error" style="width: 100%;">  
-             <img src="Screenshot (3).png" alt="error" style="width: 100%;">
-                
-            </div>
-            <div class="certificate-right flex items-center"></div>
 
-    </section>-->
-    <!--<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Website</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-    }
-
-    header {
-      background-color: #333;
-      color: #ffffff;
-      padding: 10px;
-      text-align: center;
-    }
-
-    section {
-      max-width: 800px;
-      margin: 20px auto;
-      padding: 20px;
-      background-color: #fff;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      position: relative;
-    }
-
-    #certificate {
-      max-width: 100%;
-      height: auto;
-      display: block;
-      margin: 20px auto;
-      border: 1px solid #ddd;
-      box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    }
-  </style>
-</head>
-<body>
-
-  <header>
-    <h1>certificate</h1>
-  </header>
-
-  <section>
-    <h2>Welcome to my achievement</h2>
-    <p>This is the main content of my achievement. </p>-->
-
-    <!-- Certificate Image -->
-   <!-- <img id="certificate" src="Screenshot (1).png" alt="Certificate Image" style=" size: 100%; ">
-    <img id="certificate" src="Screenshot (2).png" alt="Certificate Image" style="  width: 70%; ">
-    <img id="certificate" src="Screenshot (3).png" alt="Certificate Image" style="  width: 70%; ">
-    
-    <p>Feel free to explore our services and learn more about what we have to offer.</p>
-  </section>
-
-</body>
-</html>-->
 
 
     <!-- Skills Section -->
@@ -258,17 +186,18 @@
             </div>
             <div class="projects-item flex f-col s-center items-center">
                 <div class="image-container p-three">
-                    <img src="./login.png" alt="">
+                    <img src="./Intelligent Fashion CRM Automation.png" alt="">
                 </div>
 
-                <h1 class="t-white poppins">Login Form</h1>
-                <p class="t-white poppins">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic obcaecati cum
-                    nemo
-                    recusandae voluptas ipsum.s</p>
+                <h1 class="t-white poppins">Intelligent Fashion CRM Automation</h1>
+                <p class="t-white poppins">The Intelligent Fashion CRM Automation project is the implementation of a customized Salesforce 
+Customer Relationship Management (CRM) solution for HandsMen Threads, a premium men's 
+fashion and tailoring brand.
+                    </p>
                 <div class="buttons flex s-around">
-                    <a href="#" target="_blank"
+                    <a href="https://github.com/luckyjunghare881/HandsMen_Threads_Project" target="_blanks"
                         class="btn mx-1 m-top">GitHub</a>
-                    <a href="#" target="_blank" class="btn m-top live">Live
+                    <a href="https://orgfarm-55b37fb5d3-dev-ed.develop.lightning.force.com/lightning/o/HandsMen_Customer__c/list?filterName=__Recent" target="_blank" class="btn m-top live">Live
                         Link</a>
                 </div>
             </div>
