--- a/certificate.html
+++ b/certificate.html
@@ -234,6 +234,10 @@
                 <img src="My Certificates/Screenshot 2025-12-18 223240.png" alt="Certificate 33">
             </div>
 
+            <div class="certificate-item">
+                <img src="My Certificates/Screenshot 2025-12-19 224713.png" alt="Certificate 33">
+            </div>
+
             
 
 </body>
