python certificate addsed

--- a/certificate.html
+++ b/certificate.html
@@ -239,6 +239,11 @@
             </div>
 
             
+            <div class="certificate-item">
+                <img src="My Certificates/Screenshot 2025-12-19 230134.png" alt="Certificate 33">
+            </div>
+
+            
 
 </body>
 </html>
