--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <li class="bottomo-hover flex s-center items-center"><i class="fa-solid fa-user"></i></li>
                 </a>
                 <a href="certificate.html">
-                    <li class="bottomo-hover flex s-center items-center"><i class="fa-solid fa-user"></i></li>
+                    <li class="bottomo-hover flex s-center items-center"><i class="fa-solid fa-certificate"></i></li>
                 </a>
                 <a href="skills.html">
                     <li class="bottomo-hover flex s-center items-center"><i class="fa-solid fa-code"></i></li>
@@ -273,8 +273,16 @@ fashion and tailoring brand.
             <a href="https://www.instagram.com/im__lucky_881/" target="_blank">
                 <li><i class="fa-brands fa-instagram"></i></li>
             </a>
-            <a href="https://youtube.com/@mjshorts8069?si=2n7CmezY40jVk5k3" target="_blank">
+            <a href="https://www.youtube.com/@Dream_Crafters05" target="_blank">
                 <li><i class="fa-brands fa-youtube"></i></li>
+            </a>
+
+             <a href="https://www.facebook.com/lucky.junghare.2025/" target="_blank">
+                <li><i class="fa-brands fa-facebook"></i></li>
+            </a>
+
+             <a href="https://x.com/Junghare_Glowup" target="_blank">
+                <li><i class="fa-brands fa-twitter"></i></li>
             </a>
         </ul>
         <p class="t-center my-2 poppins">&copy; All Rights Reserved - <span class="cpy-white poppins">lucky 
