--- a/certificate.html
+++ b/certificate.html
@@ -243,9 +243,11 @@
                 <img src="My Certificates/Screenshot 2025-12-19 230134.png" alt="Certificate 33">
             </div>
 
-            
+            <div class="certificate-item">
+                <img src="My Certificates/Screenshot 2025-12-27 163908.png" alt="Enhanced Portrait">
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
-
-
