scroll button remove

--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
         </div>
     </footer>
 
-    <!-- Scroll to Top Button -->
+    <!-- Scroll to Top Button --
     <div id="scroll-top">
         <i class="fa-solid fa-arrow-up"></i>
     </div>
