--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li><a href="#skills" class="nav-link">Skills</a></li>
                     <li><a href="#services" class="nav-link">Services</a></li>
                     <li><a href="#projects" class="nav-link">Projects</a></li>
-                    <li><a href="#contacts" class="nav-link">Contact</a></li>
+                    <li><a href="#contact" class="nav-link">Contact</a></li>
                 </ul>
             </div>
             <div class="hamburger" id="hamburger">
